Fixed footer services column text alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1180,7 +1180,6 @@ h4 {
 .services-outro a {
     color: #000;
     cursor: pointer;
-    padding-top: 1rem;
 }
 
 /*------------------- about us page intro --*/
@@ -1386,10 +1385,9 @@ h4 {
 
 .footer-services ul {
     list-style: none;
-    padding-inline-start: 0;
+    padding-inline-start: 1rem;
     font-size: 0.8rem;
     text-align: left;
-    padding-top: 1rem;
 }
 
 .footer-contact ul {
